@@ -10,12 +10,11 @@ import com.learning.progress.exception.ApiException;
 import com.learning.progress.mapper.QuestionMapper;
 import com.learning.progress.repository.ChallengeSectionRepository;
 import com.learning.progress.repository.QuestionRepository;
-import com.learning.progress.service.CacheService;
+import com.learning.progress.cache.CacheService;
 import com.learning.progress.service.QuestionService;
 import com.learning.progress.service.validator.QuestionValidator;
 import com.learning.progress.util.JsonUtil;
 import com.learning.progress.util.JwtUtil;
-import com.learning.progress.util.TraceUtil;
 import jakarta.validation.ConstraintViolation;
 import jakarta.validation.Validator;
 import lombok.extern.slf4j.Slf4j;
@@ -29,6 +28,7 @@ import java.time.OffsetDateTime;
 import java.util.*;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
+import java.util.stream.Stream;
 
 @Service
 @Slf4j
@@ -43,18 +43,18 @@ public class QuestionServiceImpl implements QuestionService {
     @Autowired private CacheService cacheService;
 
     // =====================================================================
-    // READ: CÓ CACHE
+    // READ: CÓ CACHE (chỉ cache DATA)
     // =====================================================================
 
     @Override
     public QuestionDto getQuestion(Long id) {
-        String traceId = TraceUtil.getTraceId();
-        log.debug("[{}] Getting question with ID: {}", traceId, id);
+        log.debug("Getting question with ID: {}", id);
 
         String cacheKey = cacheService.buildQuestionCacheKey(id);
-        QuestionDto cached = cacheService.getCachedObject(cacheKey, new TypeReference<QuestionDto>() {}, traceId);
+        QuestionDto cached = cacheService.getCachedObject(cacheKey, new TypeReference<>() {});
+
         if (cached != null) {
-            log.debug("[{}] Cache HIT for question: {}", traceId, cacheKey);
+            log.debug("Cache HIT for question: {}", id);
             return cached;
         }
 
@@ -62,20 +62,21 @@ public class QuestionServiceImpl implements QuestionService {
                 .orElseThrow(() -> new ApiException(Const.QUESTION.NOT_FOUND, HttpStatus.NOT_FOUND.value()));
 
         QuestionDto result = questionMapper.toQuestionDto(question);
-        cacheService.cacheObject(cacheKey, result, CacheService.QUESTION_TTL_MINUTES, traceId);
+        cacheService.cacheObject(cacheKey, result, CacheService.QUESTION_TTL_MINUTES);
 
+        log.debug("Cache stored for question: {}", id);
         return result;
     }
 
     @Override
     public List<QuestionDto> getQuestionsBySection(Long sectionId) {
-        String traceId = TraceUtil.getTraceId();
-        log.debug("[{}] Getting questions for sectionId: {}", traceId, sectionId);
+        log.debug("Getting questions for sectionId: {}", sectionId);
 
         String cacheKey = cacheService.buildQuestionsBySectionCacheKey(sectionId);
-        List<QuestionDto> cached = cacheService.getCachedObject(cacheKey, new TypeReference<List<QuestionDto>>() {}, traceId);
+        List<QuestionDto> cached = cacheService.getCachedObject(cacheKey, new TypeReference<>() {});
+
         if (cached != null) {
-            log.debug("[{}] Cache HIT for questions by section: {}", traceId, cacheKey);
+            log.debug("Cache HIT for questions by section: {}", sectionId);
             return cached;
         }
 
@@ -85,7 +86,8 @@ public class QuestionServiceImpl implements QuestionService {
         List<Question> questions = questionRepository.findBySectionIdAndDeletedAtIsNull(sectionId);
         List<QuestionDto> result = questionMapper.toQuestionDtos(questions);
 
-        cacheService.cacheObject(cacheKey, result, CacheService.QUESTION_TTL_MINUTES, traceId);
+        cacheService.cacheObject(cacheKey, result, CacheService.QUESTION_TTL_MINUTES);
+        log.debug("Cache stored for questions by sectionId: {}", sectionId);
 
         return result;
     }
@@ -97,44 +99,39 @@ public class QuestionServiceImpl implements QuestionService {
     @Override
     @Transactional
     public List<QuestionDto> bulkQuestion(List<QuestionDto> dtos, Long sectionId) {
-        String traceId = TraceUtil.getTraceId();
-        log.info("[{}] Processing bulk question for sectionId: {}", traceId, sectionId);
+        log.info("Processing bulk question for sectionId: {}", sectionId);
 
-        // === 1. Validate Section ===
         ChallengeSection section = sectionRepository.findByIdAndDeletedAtIsNull(sectionId)
                 .orElseThrow(() -> new ApiException(Const.SECTION.NOT_FOUND, HttpStatus.NOT_FOUND.value()));
 
-        // === 2. Load Existing Active Questions ===
         List<Question> existingActiveQuestions = questionRepository
                 .findBySectionIdAndDeletedAtIsNullOrderByOrderNumberAsc(sectionId);
         Set<Long> existingActiveIds = existingActiveQuestions.stream()
                 .map(Question::getId)
                 .collect(Collectors.toSet());
 
-        // === 3. Phân loại Requests ===
-        List<QuestionDto> deleteRequests = dtos.stream().filter(QuestionDto::isToBeDeleted).collect(Collectors.toList());
-        List<QuestionDto> nonDeletedRequests = dtos.stream().filter(dto -> !dto.isToBeDeleted()).collect(Collectors.toList());
+        List<QuestionDto> deleteRequests = dtos.stream().filter(QuestionDto::isToBeDeleted).toList();
+        List<QuestionDto> nonDeletedRequests = dtos.stream().filter(dto -> !dto.isToBeDeleted()).toList();
 
-        // === 4. Validate ===
-        validateBulkRequests(deleteRequests, nonDeletedRequests, existingActiveIds, section, traceId);
+        validateBulkRequests(deleteRequests, nonDeletedRequests, existingActiveIds, section);
 
-        // === 5. Process (DELETE / UPDATE / CREATE) ===
-        List<QuestionDto> result = processQuestions(deleteRequests, nonDeletedRequests, section, traceId);
+        List<QuestionDto> result = processQuestions(deleteRequests, nonDeletedRequests, section);
 
-        // === 6. XÓA TOÀN BỘ CACHE LIÊN QUAN ===
         Long challengeId = section.getChallenge().getId();
-        cacheService.clearCacheForSection(sectionId, challengeId, traceId);
+        cacheService.clearCacheForSection(sectionId, challengeId);
 
-        // Xóa cache từng question nếu có thay đổi
         deleteRequests.stream()
                 .map(QuestionDto::getId)
                 .filter(Objects::nonNull)
-                .forEach(qid -> cacheService.clearCacheForQuestion(qid, sectionId, challengeId, traceId));
+                .forEach(qid -> cacheService.clearCacheForQuestion(qid, sectionId, challengeId));
 
         nonDeletedRequests.stream()
                 .map(QuestionDto::getId)
                 .filter(Objects::nonNull)
-                .forEach(qid -> cacheService.clearCacheForQuestion(qid, sectionId, challengeId, traceId));
+                .forEach(qid -> cacheService.clearCacheForQuestion(qid, sectionId, challengeId));
+
+        log.info("Successfully processed {} questions ({} deleted, {} created/updated) for sectionId: {}",
+                dtos.size(), deleteRequests.size(), nonDeletedRequests.size(), sectionId);
 
         return result;
     }
@@ -142,8 +139,7 @@ public class QuestionServiceImpl implements QuestionService {
     @Override
     @Transactional
     public void deleteQuestions(List<Long> ids) {
-        String traceId = TraceUtil.getTraceId();
-        log.info("[{}] Deleting questions with IDs: {}", traceId, ids);
+        log.info("Deleting questions with IDs: {}", ids);
 
         if (ids == null || ids.isEmpty()) {
             throw new ApiException(Const.QUESTION.IDS_REQUIRED, HttpStatus.BAD_REQUEST.value());
@@ -163,21 +159,19 @@ public class QuestionServiceImpl implements QuestionService {
         });
         questionRepository.saveAll(questions);
 
-        // === XÓA CACHE CHO TỪNG QUESTION + SECTION + CHALLENGE ===
         questions.forEach(q -> {
             Long sectionId = q.getSection().getId();
             Long challengeId = q.getSection().getChallenge().getId();
-            cacheService.clearCacheForQuestion(q.getId(), sectionId, challengeId, traceId);
+            cacheService.clearCacheForQuestion(q.getId(), sectionId, challengeId);
         });
 
-        log.info("[{}] Successfully soft deleted {} questions", traceId, questions.size());
+        log.info("Successfully soft deleted {} questions", questions.size());
     }
 
     @Override
     @Transactional
     public void updateScoreQuestion(Long questionId, double score) {
-        String traceId = TraceUtil.getTraceId();
-        log.info("[{}] Updating score for question ID: {}, new score: {}", traceId, questionId, score);
+        log.info("Updating score for question ID: {}, new score: {}", questionId, score);
 
         Question question = questionRepository.findByIdAndDeletedAtIsNull(questionId)
                 .orElseThrow(() -> new ApiException(Const.QUESTION.NOT_FOUND, HttpStatus.NOT_FOUND.value()));
@@ -185,12 +179,103 @@ public class QuestionServiceImpl implements QuestionService {
         question.setScore(BigDecimal.valueOf(score));
         questionRepository.save(question);
 
-        // === XÓA CACHE ===
         Long sectionId = question.getSection().getId();
         Long challengeId = question.getSection().getChallenge().getId();
-        cacheService.clearCacheForQuestion(questionId, sectionId, challengeId, traceId);
+        cacheService.clearCacheForQuestion(questionId, sectionId, challengeId);
 
-        log.info("[{}] Updated score for question ID {} to {}", traceId, questionId, score);
+        log.info("Updated score for question ID {} to {}", questionId, score);
+    }
+
+    @Override
+    @Transactional
+    public Map<Long, List<QuestionDto>> bulkInsertQuestionsForSections(Map<Long, List<QuestionDto>> sectionQuestionsMap) {
+        if (sectionQuestionsMap == null || sectionQuestionsMap.isEmpty()) {
+            return Map.of();
+        }
+
+        log.info("Bulk INSERT questions for {} sections", sectionQuestionsMap.size());
+
+        // === 1. Batch load sections (1 query) - only to validate & get challengeId ===
+        Set<Long> sectionIds = sectionQuestionsMap.keySet();
+        Collection<ChallengeSection> sections = sectionRepository.findByIdInAndDeletedAtIsNull(sectionIds);
+        Map<Long, ChallengeSection> sectionMap = sections.stream()
+                .collect(Collectors.toMap(ChallengeSection::getId, s -> s));
+
+        if (sectionMap.size() != sectionIds.size()) {
+            Set<Long> missing = new HashSet<>(sectionIds);
+            missing.removeAll(sectionMap.keySet());
+            throw new ApiException("Sections not found: " + missing, HttpStatus.NOT_FOUND.value());
+        }
+
+        Long challengeId = sectionMap.values().iterator().next().getChallenge().getId();
+
+        // === 2. Prepare ALL questions for batch insert (in-memory) ===
+        List<Question> questionsToSave = new ArrayList<>();
+        Map<Long, List<QuestionDto>> result = new HashMap<>();
+
+        for (Map.Entry<Long, List<QuestionDto>> entry : sectionQuestionsMap.entrySet()) {
+            Long sectionId = entry.getKey();
+            List<QuestionDto> dtos = entry.getValue();
+            ChallengeSection section = sectionMap.get(sectionId);
+
+            List<QuestionDto> savedDtos = new ArrayList<>(dtos.size());
+
+            for (int i = 0; i < dtos.size(); i++) {
+                QuestionDto dto = dtos.get(i);
+
+                // Validate: id must be null
+                if (dto.getId() != null) {
+                    throw new ApiException("Question ID must be null for insert in section " + sectionId, HttpStatus.BAD_REQUEST.value());
+                }
+
+                // Bean validation
+                Set<ConstraintViolation<QuestionDto>> violations = validator.validate(dto, QuestionDto.NotDeleted.class);
+                if (!violations.isEmpty()) {
+                    String msg = violations.stream().map(ConstraintViolation::getMessage).collect(Collectors.joining(", "));
+                    throw new ApiException("Validation failed: " + msg, HttpStatus.BAD_REQUEST.value());
+                }
+
+                // Business validation
+                questionValidator.validateQuestionDto(dto);
+
+                // Auto order number
+                Integer order = 1;
+
+                // Build entity
+                Question q = new Question();
+                q.setSection(section);
+                q.setQuestionText(dto.getQuestionText());
+                q.setScore(BigDecimal.valueOf(dto.getScore()));
+                q.setQuestionType(QuestionType.valueOf(dto.getQuestionType()));
+                q.setOrderNumber(order);
+                q.setQuestionContentJson(JsonUtil.objectToMap(dto.getContent()));
+
+                questionsToSave.add(q);
+                savedDtos.add(dto); // will update ID later
+            }
+
+            result.put(sectionId, savedDtos);
+        }
+
+        // === 3. Batch INSERT all questions (1 DB call) ===
+        List<Question> savedQuestions = questionRepository.saveAll(questionsToSave);
+
+        // === 4. Map generated IDs back to DTOs ===
+        int idx = 0;
+        for (Map.Entry<Long, List<QuestionDto>> e : result.entrySet()) {
+            List<QuestionDto> dtos = e.getValue();
+            for (QuestionDto dto : dtos) {
+                if (idx < savedQuestions.size()) {
+                    dto.setId(savedQuestions.get(idx++).getId());
+                }
+            }
+        }
+
+        // === 5. Clear cache once ===
+        cacheService.clearCacheForSection(null, challengeId);
+
+        log.info("Bulk inserted {} questions across {} sections", savedQuestions.size(), result.size());
+        return result;
     }
 
     // =====================================================================
@@ -198,17 +283,18 @@ public class QuestionServiceImpl implements QuestionService {
     // =====================================================================
 
     private void validateBulkRequests(List<QuestionDto> deleteRequests, List<QuestionDto> nonDeletedRequests,
-                                      Set<Long> existingActiveIds, ChallengeSection section, String traceId) {
+                                      Set<Long> existingActiveIds, ChallengeSection section) {
 
-        // DELETE validation
         for (QuestionDto deleteDto : deleteRequests) {
             Set<ConstraintViolation<QuestionDto>> violations = validator.validate(deleteDto, QuestionDto.Deleted.class);
             if (!violations.isEmpty()) {
                 String errorMsg = violations.stream().map(ConstraintViolation::getMessage).collect(Collectors.joining(", "));
+                log.error("Validation error for delete: {}", errorMsg);
                 throw new ApiException(errorMsg, HttpStatus.BAD_REQUEST.value());
             }
             Long deleteId = deleteDto.getId();
             if (deleteId == null || !existingActiveIds.contains(deleteId)) {
+                log.error("Invalid delete ID: {}", deleteId);
                 throw new ApiException("Question ID to delete does not exist: " + deleteId, HttpStatus.BAD_REQUEST.value());
             }
         }
@@ -223,28 +309,28 @@ public class QuestionServiceImpl implements QuestionService {
                 .filter(Objects::nonNull)
                 .collect(Collectors.toSet());
 
-        // All request IDs must exist
         Set<Long> invalidIds = new HashSet<>();
-        invalidIds.addAll(requestExistingIds.stream().filter(id -> !existingActiveIds.contains(id)).collect(Collectors.toSet()));
-        invalidIds.addAll(requestDeleteIds.stream().filter(id -> !existingActiveIds.contains(id)).collect(Collectors.toSet()));
+        invalidIds.addAll(requestExistingIds.stream().filter(id -> !existingActiveIds.contains(id)).toList());
+        invalidIds.addAll(requestDeleteIds.stream().filter(id -> !existingActiveIds.contains(id)).toList());
         if (!invalidIds.isEmpty()) {
+            log.error("Invalid question IDs: {}", invalidIds);
             throw new ApiException("Invalid question IDs: " + invalidIds, HttpStatus.BAD_REQUEST.value());
         }
 
-        // All DB questions must be handled
         Set<Long> handledIds = new HashSet<>(requestExistingIds);
         handledIds.addAll(requestDeleteIds);
         Set<Long> unhandledDbIds = existingActiveIds.stream()
                 .filter(id -> !handledIds.contains(id))
                 .collect(Collectors.toSet());
         if (!unhandledDbIds.isEmpty()) {
+            log.error("Unhandled questions: {}", unhandledDbIds);
             throw new ApiException("Questions not handled: " + unhandledDbIds, HttpStatus.BAD_REQUEST.value());
         }
 
-        // Count consistency
         int expectedNonDeletedCount = existingActiveIds.size() - requestDeleteIds.size();
         int actualNonDeletedCount = requestExistingIds.size();
         if (actualNonDeletedCount != expectedNonDeletedCount) {
+            log.error("Count mismatch! Expected: {}, Actual: {}", expectedNonDeletedCount, actualNonDeletedCount);
             throw new ApiException(
                     String.format("Non-deleted questions count mismatch! Expected: %d, Actual: %d",
                             expectedNonDeletedCount, actualNonDeletedCount),
@@ -252,17 +338,16 @@ public class QuestionServiceImpl implements QuestionService {
             );
         }
 
-        // Bean validation
         for (QuestionDto dto : nonDeletedRequests) {
             Set<ConstraintViolation<QuestionDto>> violations = validator.validate(dto, QuestionDto.NotDeleted.class);
             if (!violations.isEmpty()) {
                 String errorMsg = violations.stream().map(ConstraintViolation::getMessage).collect(Collectors.joining(", "));
+                log.error("Validation error: {}", errorMsg);
                 throw new ApiException(errorMsg, HttpStatus.BAD_REQUEST.value());
             }
             questionValidator.validateQuestionDto(dto);
         }
 
-        // Order numbers: 1 → N
         Set<Integer> orderNumbers = nonDeletedRequests.stream()
                 .map(QuestionDto::getOrderNumber)
                 .filter(Objects::nonNull)
@@ -270,6 +355,7 @@ public class QuestionServiceImpl implements QuestionService {
         int nonDeletedSize = nonDeletedRequests.size();
         Set<Integer> expectedOrders = IntStream.rangeClosed(1, nonDeletedSize).boxed().collect(Collectors.toSet());
         if (orderNumbers.size() != nonDeletedSize || !orderNumbers.equals(expectedOrders)) {
+            log.error("Invalid order numbers: {}", orderNumbers);
             throw new ApiException(
                     String.format("Order numbers must be sequential from 1 to %d. Found: %s", nonDeletedSize, orderNumbers),
                     HttpStatus.BAD_REQUEST.value()
@@ -278,7 +364,7 @@ public class QuestionServiceImpl implements QuestionService {
     }
 
     private List<QuestionDto> processQuestions(List<QuestionDto> deleteRequests, List<QuestionDto> nonDeletedRequests,
-                                               ChallengeSection section, String traceId) {
+                                               ChallengeSection section) {
         List<QuestionDto> result = new ArrayList<>();
         OffsetDateTime now = OffsetDateTime.now();
 
